# vitalis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  SETUP_GIT.ps1  linkedin_post.md  teams_post.md  test_output.txt  test_results.txt  tr.txt  tr2.txt  tr3.txt  tr_now.txt  tresult.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: EXTENDING.md  LANGUAGE_GUIDE.md
examples/: arithmetic.sl  control_flow.sl  enums.sl  evolution.sl  hello.sl  pipes.sl  stdlib_demo.sl  structs.sl
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
frontend/src/app/consulting/: layout.tsx  page.tsx
frontend/src/app/nova/: layout.tsx  page.tsx
frontend/src/app/techstack/: layout.tsx  page.tsx
frontend/src/app/vitalis/: layout.tsx  page.tsx
frontend/src/components/: EventFeed.tsx  SentientAvatar.tsx
frontend/src/lib/: api.ts
python/: README.md  vitalis.py
src/: abstract_interp.rs  advanced_math.rs  ai_observability.rs  analytics.rs  aot.rs  ast.rs  async_runtime.rs  audio.rs  autograd.rs  automata.rs  autonomous_agent.rs  benchmark.rs  bioinformatics.rs  bootstrap.rs  bpe_tokenizer.rs  bridge.rs  build_system.rs  certified_compiler.rs  chart_rendering.rs  chemistry_advanced.rs  cloud_deploy.rs  code_intelligence.rs  codegen.rs  combinatorial.rs  compression.rs  concurrency.rs  consensus.rs  const_eval.rs  continual_learning.rs  creative_coding.rs  cross_compile.rs  crypto.rs  dap.rs  data_pipeline.rs  data_structures.rs  database.rs  deep_learning.rs  dependent_types.rs  differentiable.rs  distributed_build.rs  (+111 more)
