[package]
name = "vitalis"
version = "3.0.0"
edition = "2024"
description = "Vitalis v3.0 — JIT-compiled language with 200+ stdlib functions, 14 domain libraries, closures, structs, modules, self-evolving @evolvable functions, Nova ML engine (tensors, transformers, GPU, training, BPE), 748 tests — Cranelift JIT"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ModernOps888/vitalis"
homepage = "https://github.com/ModernOps888/vitalis"
readme = "README.md"
keywords = ["compiler", "jit", "evolution", "cranelift", "algorithms"]
categories = ["compilers", "development-tools", "algorithms", "science"]

[lib]
name = "vitalis"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vtc"
path = "src/main.rs"

[dependencies]
# Lexer — zero-copy, derive-based token definitions
logos = "0.14"

# Code generation — fast JIT/AOT compilation
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"

# Error reporting
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Regex
regex = "1"

# Utilities
indexmap = "2"

# HTTP client (blocking)
ureq = "2"

[profile.release]
opt-level = 3
lto = true
