[package]
name = "vitalis"
version = "20.0.0"
edition = "2024"
description = "Vitalis v15.0 — a JIT-compiled language with working closures, 46 new stdlib functions (strings, file I/O, maps, error handling, JSON, system), 24 algorithm libraries, self-evolving @evolvable functions — native Cranelift JIT performance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ModernOps888/vitalis"
homepage = "https://github.com/ModernOps888/vitalis"
readme = "README.md"
keywords = ["compiler", "jit", "evolution", "cranelift", "algorithms"]
categories = ["compilers", "development-tools", "algorithms", "science"]

[lib]
name = "vitalis"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vtc"
path = "src/main.rs"

[dependencies]
# Lexer — zero-copy, derive-based token definitions
logos = "0.14"

# Code generation — fast JIT/AOT compilation
cranelift = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"

# Error reporting
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Regex
regex = "1"

# Utilities
indexmap = "2"

# HTTP client (blocking)
ureq = "2"

[profile.release]
opt-level = 3
lto = true
